# rl-mpc-gym

./: CMakeLists.txt  README.md  main.cpp  whole_body_controller.cpp
raisimGymTorch/: CMakeLists.txt
raisimGymTorch/data/a1_env/: rewards.csv
raisimGymTorch/data/a1_env/big_net/: full_0.pt  full_20.pt  full_40.pt  full_60.pt  mean20.csv  mean40.csv  mean60.csv  var20.csv  var40.csv  var60.csv
raisimGymTorch/data/a1_env/big_net/May10_13-40-09/: events.out.tfevents.1652186410.solo12-opc.12037.0
raisimGymTorch/data/a1_env/big_net/pretrained_big_net_1/: Environment.hpp  cfg.yaml  full_80.pt  mean80.csv  var80.csv
raisimGymTorch/data/a1_env/bigger_net/: Environment.hpp  cfg.yaml  full_0.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var0.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/bigger_net/May10_14-35-53/: events.out.tfevents.1652189754.solo12-opc.29094.0
raisimGymTorch/data/a1_env/double_ob/: full_0.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean0.csv  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/double_ob/May09_16-12-12/: events.out.tfevents.1652109133.solo12-opc.15846.0
raisimGymTorch/data/a1_env/double_ob/pretrained_double_ob_2/: Environment.hpp  full_20.pt  var20.csv
raisimGymTorch/data/a1_env/energy_train_0.03/: full_0.pt  full_20.pt  full_40.pt  full_60.pt  mean0.csv  mean20.csv  mean40.csv  mean60.csv  var0.csv  var20.csv  var40.csv  var60.csv
raisimGymTorch/data/a1_env/energy_train_0.03/May07_15-01-23/: events.out.tfevents.1651932083.solo12-opc.15471.0
raisimGymTorch/data/a1_env/energy_train_0.03/pretrained_energy_train_pt1/: Environment.hpp  cfg.yaml  full_20.pt
raisimGymTorch/data/a1_env/energy_train_0.1/: cfg.yaml  full_0.pt  full_20.pt  full_40.pt  full_60.pt  mean20.csv  mean40.csv  mean60.csv  var0.csv  var20.csv  var40.csv  var60.csv
raisimGymTorch/data/a1_env/energy_train_0.1/May07_17-28-21/: events.out.tfevents.1651940902.solo12-opc.28466.0
raisimGymTorch/data/a1_env/energy_train_0.1/pretrained_complete_train_pt6/: full_160.pt  mean160.csv
raisimGymTorch/data/a1_env/gait_param_train/: Environment.hpp  full_0.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean0.csv  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/gait_param_train/May08_21-47-58/: events.out.tfevents.1652042879.solo12-opc.30529.0
raisimGymTorch/data/a1_env/long_net/: Environment.hpp  cfg.yaml  full_0.pt  full_100.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean0.csv  mean100.csv  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var100.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/long_net/May10_15-40-01/: events.out.tfevents.1652193602.solo12-opc.16621.0
raisimGymTorch/data/a1_env/mpc_and_dyn_1/: Environment.hpp  full_0.pt  full_100.pt  full_120.pt  full_140.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean0.csv  mean100.csv  mean120.csv  mean140.csv  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var0.csv  var100.csv  var120.csv  var140.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/mpc_and_dyn_1/May06_21-57-22/: events.out.tfevents.1651870643.solo12-opc.5506.0
raisimGymTorch/data/a1_env/mpc_and_dyn_1/pretrained_complete_train_pt5_tight_term/: Environment.hpp  cfg.yaml  full_120.pt
raisimGymTorch/data/a1_env/mpc_full_train_dubious/: Environment.hpp  full_0.pt  full_20.pt  full_40.pt  full_60.pt  mean0.csv  mean20.csv  mean40.csv  mean60.csv  var0.csv  var20.csv  var40.csv  var60.csv
raisimGymTorch/data/a1_env/mpc_full_train_dubious/May04_20-09-23/: events.out.tfevents.1651691363.solo12-opc.7949.0
raisimGymTorch/data/a1_env/mpc_full_train_dubious/pretrained_full train pt1/: Environment.hpp  cfg.yaml  full_80.pt
raisimGymTorch/data/a1_env/mpc_sprint_train/: cfg.yaml  full_80.pt  var80.csv
raisimGymTorch/data/a1_env/new_obs_space_train/: Environment.hpp  full_0.pt  full_100.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean100.csv  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var100.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/new_obs_space_train/May07_18-30-42/: events.out.tfevents.1651944643.solo12-opc.9061.0
raisimGymTorch/data/a1_env/sprint test/: full_0.pt  full_10.pt  full_30.pt  full_40.pt  full_50.pt  mean10.csv  mean40.csv  mean70.csv  mean80.csv  var40.csv  var60.csv  var70.csv
raisimGymTorch/data/a1_env/sprint test/May01_18-49-36/: events.out.tfevents.1651427377.solo12-opc.11960.0
raisimGymTorch/data/a1_env/swing_param_train/: Environment.hpp  cfg.yaml  full_0.pt  full_100.pt  full_120.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean100.csv  mean120.csv  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var0.csv  var100.csv  var120.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/swing_param_train/May09_13-08-15/: events.out.tfevents.1652098097.solo12-opc.23085.0
raisimGymTorch/data/a1_env/trip_ob_1/: Environment.hpp  full_0.pt  full_100.pt  full_120.pt  full_140.pt  full_160.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean0.csv  mean100.csv  mean120.csv  mean140.csv  mean160.csv  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var0.csv  var100.csv  var120.csv  var140.csv  var160.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/trip_ob_1/May09_21-09-41/: events.out.tfevents.1652126982.solo12-opc.28924.0
raisimGymTorch/data/a1_env/v3_train/: Environment.hpp  full_0.pt  full_100.pt  full_20.pt  full_40.pt  full_60.pt  full_80.pt  mean100.csv  mean20.csv  mean40.csv  mean60.csv  mean80.csv  var100.csv  var20.csv  var40.csv  var60.csv  var80.csv
raisimGymTorch/data/a1_env/v3_train/May08_14-00-20/: events.out.tfevents.1652014822.solo12-opc.13762.0
raisimGymTorch/raisimGymTorch/algo/ppo/: module.py  ppo.py
raisimGymTorch/raisimGymTorch/env/: RaisimGymEnv.hpp
raisimGymTorch/raisimGymTorch/env/envs/a1_env/: cfg.yaml  (+3 more)
(+26 files in other folders)
